--- a/data/static/css/style.css
+++ b/data/static/css/style.css
@@ -75,6 +75,11 @@ footer {
 
 .content {
     background-color: #02aab0;
+    background-image: linear-gradient(
+        135deg,
+        #02aab0 0%,
+        #00cdac 100%
+    );
     color: #fff;
     border-top: 0px;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
@@ -127,7 +132,6 @@ footer {
     background: #02aab0;
 }
 
-.centered {
-    justify-content: center !important;
-    width: 100% !important;
+.signature {
+    
 }
